Added public profile routes for checking, follow and unfollow
